fix z-index for  burger menu

--- a/components/mobileMenu/mobileMenu_en/mobMenuEn.module.css
+++ b/components/mobileMenu/mobileMenu_en/mobMenuEn.module.css
@@ -14,6 +14,7 @@ position: fixed;
     padding-bottom: 20px;
     background-color: black;
     animation: .2s linear menu;
+    z-index: 1;
 }
 
 @keyframes menu {
@@ -40,7 +41,8 @@ from {
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: black;
-    animation: .2s linear close;
+    z-index: 1;
+    animation: 0.2s linear close;
 }
 
 @keyframes close {
